--- a/gvnmcg/src/style/index.css
+++ b/gvnmcg/src/style/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   background-color: #71EEB8;
+  
+  background-size: 100%;
+  background-image: url(colored-snow.jpg);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
