art page, fixed playlists

--- a/gvnmcg/src/style/App.css
+++ b/gvnmcg/src/style/App.css
@@ -16,6 +16,10 @@ iframe {
   allow: "encrypted-media";
 }
 
+.img {
+  max-width: 100%;
+}
+
 .header {
   text-align: center;
 }
@@ -37,6 +41,12 @@ iframe {
 
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+}
+
+.art{
+  display: flex;
+  flex-direction: column;
   justify-content: space-around;
 }
 
