tab app fixed localy

--- a/gvnmcg/src/style/themes.css
+++ b/gvnmcg/src/style/themes.css
@@ -1,33 +1,35 @@
 :root {
-
-
 }
 
 .morning {
-
 }
 
 .day {
-
 }
 
 .evening {
-
 }
 
 .night {
-
-
 }
 
 .overcast {
-
 }
 
 .rain {
-
 }
 
 .snow {
+}
 
+.spring {
+}
+
+.summer {
+}
+
+.fall {
+}
+
+.winter {
 }
